--- a/index.html
+++ b/index.html
@@ -1,79 +1,38 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Portfolio</title>
-  <link rel="stylesheet" href="styles.css">
+<html lang="ja">
+<head><meta charset="utf-8">
+<title>あなたのＨＰタイトル</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="description" content="ページの説明">
+<meta name="keywords" content="ページのキーワードA,B,C">
+<link rel="stylesheet" href="index.css">
 </head>
 <body>
-  <!-- Header Section -->
-  <header>
-    <nav>
-      <div class="logo">MyPortfolio</div>
-      <ul>
-        <li><a href="#about">About</a></li>
-        <li><a href="#projects">Projects</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
-    </nav>
-  </header>
-
-  <!-- Hero Section -->
-  <section class="hero">
-    <h1>Welcome to My Portfolio</h1>
-    <p>Creating beautiful websites with HTML, CSS, and JavaScript</p>
-    <a href="#projects" class="cta-button">View My Work</a>
-  </section>
-
-  <!-- About Section -->
-  <section id="about" class="about">
-    <h2>About Me</h2>
-    <p>Hello, I'm a web developer with a passion for creating responsive and visually appealing websites. I specialize in front-end development and have experience working with HTML, CSS, JavaScript, and React.</p>
-  </section>
-
-  <!-- Projects Section -->
-  <section id="projects" class="projects">
-    <h2>My Projects</h2>
-    <div class="project-list">
-      <div class="project-item">
-        <img src="project1.jpg" alt="Project 1">
-        <h3>Project 1</h3>
-        <p>This is a project I worked on that showcases my skills in web development.</p>
-      </div>
-      <div class="project-item">
-        <img src="project2.jpg" alt="Project 2">
-        <h3>Project 2</h3>
-        <p>This project demonstrates my ability to build responsive websites using CSS Grid and Flexbox.</p>
-      </div>
-      <div class="project-item">
-        <img src="project3.jpg" alt="Project 3">
-        <h3>Project 3</h3>
-        <p>A dynamic web app I built using JavaScript and React.</p>
-      </div>
-    </div>
-  </section>
-
-  <!-- Contact Section -->
-  <section id="contact" class="contact">
-    <h2>Contact Me</h2>
-    <form action="#" method="post">
-      <label for="name">Name</label>
-      <input type="text" id="name" name="name" required>
-      
-      <label for="email">Email</label>
-      <input type="email" id="email" name="email" required>
-
-      <label for="message">Message</label>
-      <textarea id="message" name="message" rows="4" required></textarea>
-
-      <button type="submit">Send Message</button>
-    </form>
-  </section>
-
-  <!-- Footer Section -->
-  <footer>
-    <p>&copy; 2025 My Portfolio. All Rights Reserved.</p>
-  </footer>
-</body>
+<div id="outer">
+<header>
+<div id="header-inner"><h1>あなたのＨＰタイトル</h1></div>
+</header>
+<div id="container">
+<main>
+<div id="text">
+<h2>記事ページ見出し・大</h2>
+<p>文章あれこれ</p>
+<h3>記事ページ見出し・中</h3>
+<p>文章あれこれ</p>
+<h4>記事ページ見出し・小</h4>
+<p>文章あれこれ</p>
+</div>
+</main>
+<aside>
+<div class="side-title">menu</div>
+<div class="side">
+<ul>
+<li>記事ページへのリンク</li>
+<li>記事ページへのリンク</li>
+</ul>
+</div>
+</aside>
+</div>
+<footer>© 2010 あなたのホームページ</footer>
+</div></body>
 </html>
