--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="description" content="ページの説明">
 <meta name="keywords" content="ページのキーワードA,B,C">
-<link rel="stylesheet" href="index.css">
+<link rel="stylesheet" href="styles.css">
 </head>
 <body>
 <div id="outer">
