--- a/index.html
+++ b/index.html
@@ -1,20 +1,21 @@
 <!DOCTYPE html>
 <html lang="ja">
-<head><meta charset="utf-8">
+<head>
+<meta charset="UTF-8">
 <title>あなたのＨＰタイトル</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="description" content="ページの説明">
 <meta name="keywords" content="ページのキーワードA,B,C">
-<link rel="stylesheet" href="styles.css">
+<meta name="description" content="ページの説明">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" href="index.css">
 </head>
 <body>
 <div id="outer">
-<header>
-<div id="header-inner"><h1>あなたのＨＰタイトル</h1></div>
+<header><div id="header-container"><div id="head-inner"><h1>あなたのＨＰタイトル</h1>
+<p class="description">あなたのＨＰの説明文</p></div></div>
 </header>
-<div id="container">
+<div id="content-wrapper">
 <main>
-<div id="text">
+<div id="inner">
 <h2>記事ページ見出し・大</h2>
 <p>文章あれこれ</p>
 <h3>記事ページ見出し・中</h3>
@@ -24,12 +25,14 @@
 </div>
 </main>
 <aside>
+<div id="middle-inner">
 <div class="side-title">menu</div>
 <div class="side">
 <ul>
 <li>記事ページへのリンク</li>
 <li>記事ページへのリンク</li>
 </ul>
+</div>
 </div>
 </aside>
 </div>
