--- a/index.html
+++ b/index.html
@@ -3,39 +3,46 @@
 <head>
 <meta charset="UTF-8">
 <title>あなたのＨＰタイトル</title>
-<meta name="keywords" content="ページのキーワードA,B,C">
-<meta name="description" content="ページの説明">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="description" content="説明文">
+<meta name="keywords" content="キーワード">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="index.css">
 </head>
 <body>
 <div id="outer">
-<header><div id="header-container"><div id="head-inner"><h1>あなたのＨＰタイトル</h1>
-<p class="description">あなたのＨＰの説明文</p></div></div>
+<header>
+<div id="logo"><h1>あなたのＨＰタイトル</h1></div>
 </header>
-<div id="content-wrapper">
+<div id="content">
 <main>
 <div id="inner">
 <h2>記事ページ見出し・大</h2>
 <p>文章あれこれ</p>
-<h3>記事ページ見出し・中</h3>
-<p>文章あれこれ</p>
-<h4>記事ページ見出し・小</h4>
-<p>文章あれこれ</p>
-</div>
-</main>
+</div></main>
 <aside>
-<div id="middle-inner">
-<div class="side-title">menu</div>
+<div id="aside-inner">
+<nav id="left">
+<div class="title">menu</div>
 <div class="side">
 <ul>
 <li>記事ページへのリンク</li>
 <li>記事ページへのリンク</li>
 </ul>
 </div>
+</nav>
+<nav id="right">
+<div class="title">menu</div>
+<div class="side">
+<ul>
+<li>記事ページへのリンク</li>
+<li>記事ページへのリンク</li>
+</ul>
+</div>
+</nav>
 </div>
 </aside>
 </div>
-<footer>© 2010 あなたのホームページ</footer>
-</div></body>
+<footer>© 2019 </footer>
+</div>
+</body>
 </html>
